
-Added a reward if you finish all the Master Levels in "Hurt me Plenty" or higher difficulty (including the secret level)

-Fixed secret not triggering on Master Levels map "nessus" (Works only on the expansion)

-Fixed "idclev" cheat on console crashing the game when entering wrong level number in "No Rest For The Living" and "Master Levels" Expansions
_______________________________________

21 December 2017 - Classic RBDOOM-3-BFG 1.1.5 Update
_______________________________

[DOOM3BFG]
-Restore the audio of the Intro cutscene

-The message "Achievments are disabled" will no longer shown

[Launcher]
-Improved the mod selection for DOOM 3

-Added Skip Intro option
_______________________________________

16 December 2017 - Classic RBDOOM-3-BFG 1.1.5
_______________________________

[classicdoom]
-Restore Nightmare Difficulty confirmation message

-Restore the functionality of "-fast" parameter

-Restore Ultimate DOOM intermission animations (Ep 2 towers also shown)
_______________________________________

13 December 2017 - Classic RBDOOM-3-BFG 1.1.4 Hotfix
_______________________________

[classicdoom]
-fixed an issue with DOOM II after using the "-exp" and "-warp" parameters the game was unable to start new game on DOOM II

[Launcher]

-Various Bug Fixes
_______________________________________

09 December 2017 - Classic RBDOOM-3-BFG 1.1.4 Launcher Update
_______________________________

[classicdoom]
-Added new Parameter "-exp" in order to warp straight to the desired expansion.

-Add sub Parameter "ex" for the file parameter in order to specify for which expansion is the specific mod.

[DOOM3BFG]

-Now the parameter "com_game_mode" will boot straight to DOOM 3 if you give it value 3
_______________________________________

12 June 2017 - Classic RBDOOM-3-BFG 1.1.4
_______________________________

[classicdoom]
-Add Master Levels as expansions for DOOM II

-Fixed DOOM II modded saves check 

-Add parameter "+set com_game_mode" to open instandly DOOM or DOOM II