@@ -24,6 +24,8 @@ _______________________________
 -Fixed secret not triggering on Master Levels map "nessus" (Works only on the expansion)
 
 -Fixed "idclev" cheat on console crashing the game when entering wrong level number in "No Rest For The Living" and "Master Levels" Expansions
+
+-Re-enabling access to the xbox exclusive secret level "Betray"
 _______________________________________
 
 21 December 2017 - Classic RBDOOM-3-BFG 1.1.5 Update
